<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/desafiolatam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/design_default_color_background"
        android:paddingHorizontal="20dp"
        android:text="@string/abrir_web"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnCompartir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@color/design_default_color_background"
        android:paddingHorizontal="20dp"
        android:text="@string/compartir_informacion"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Logo"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="412dp"
        android:layout_height="544dp"
        android:layout_marginTop="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCompartir">

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>